...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Zr-eK-bCZ">
                                        <rect key="frame" x="0.0" y="110.5" width="335" height="30"/>
                                        <state key="normal" title="Перевести PW"/>
                                        <connections>
                                            <segue destination="nLB-MR-4u5" kind="show" id="yY0-2Z-Cby"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vpe-gT-hrZ">
                                        <rect key="frame" x="0.0" y="160.5" width="335" height="30"/>
                                        <state key="normal" title="Выйти из приложения"/>
                                        <connections>
                                            <action selector="handleLogout:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rex-aT-ghU"/>
                                            <segue destination="bEm-Hb-UtG" kind="showDetail" id="9YC-AL-Ph3"/>
                                        </connections>
                                    </button>
                                </subviews>
...
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5lB-XT-b5x">
                                        <rect key="frame" x="0.0" y="201" width="335" height="30"/>
                                        <state key="normal" title="Отправить"/>
                                        <connections>
                                            <segue destination="84B-DM-r9s" kind="showDetail" identifier="ShowDetailTransaction" id="OEu-IW-3l7"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48o-zD-oQ9">
                                        <rect key="frame" x="0.0" y="394" width="375" height="30"/>
                                        <state key="normal" title="На главный экран"/>
                                        <connections>
                                            <segue destination="bdB-0t-ywm" kind="show" id="3Up-sl-BHD"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.73091402202072531" green="0.14030289588808365" blue="0.19644311101734929" alpha="0.84705882352941175" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VfJ-Ak-RDC">
                                        <rect key="frame" x="0.0" y="241.5" width="335" height="30"/>
                                        <state key="normal" title="Зарегестрироваться"/>
                                        <connections>
                                            <segue destination="bdB-0t-ywm" kind="show" identifier="MoveToMainApp" id="tSk-HB-UNb"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                            <constraint firstItem="5lH-hf-BTa" firstAttribute="trailing" secondItem="9LY-KP-ZEO" secondAttribute="trailing" constant="20" id="FfN-Eh-uqY"/>
                            <constraint firstItem="9LY-KP-ZEO" firstAttribute="top" secondItem="5lH-hf-BTa" secondAttribute="top" constant="20" id="IZu-6S-ixb"/>
                            <constraint firstItem="9LY-KP-ZEO" firstAttribute="leading" secondItem="5lH-hf-BTa" secondAttribute="leading" constant="20" id="NVH-Ig-QgN"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="5lH-hf-BTa"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Регистрация" id="m4W-Q2-ICf"/>
                    <connections>
                        <outlet property="alertMessage" destination="Eag-CJ-dbN" id="KvM-dW-cjC"/>
                        <outlet property="emailField" destination="s3T-0M-b6H" id="cxe-nT-hKx"/>
                        <outlet property="passwordField" destination="aQy-Wq-XzJ" id="WWc-1K-7Lp"/>
                        <outlet property="subPasswordField" destination="Ml6-m4-zZM" id="qLq-M2-70s"/>
                    </connections>
...
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Dz-Kz-kRZ">
                                        <rect key="frame" x="0.0" y="181" width="335" height="30"/>
                                        <state key="normal" title="Авторизоваться"/>
                                        <connections>
                                            <segue destination="bdB-0t-ywm" kind="show" identifier="MoveToMainApp" id="MGX-nt-MYJ"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
